--- a/Book/Git - Github/1. 버전관리 시스템과 Git.md
+++ b/Book/Git - Github/1. 버전관리 시스템과 Git.md
@@ -6,4 +6,23 @@
 - Version Control System (VCS)라고 함 (클라이언트-서버 방식)
 - 사본의 생성, 보존, 복원을 한 번에 해줄 수 있는 도구
 - 협업을 할 경우 서로 간의 상태를 똑같게 유지하는 기능도 갖추고 있음
-### Git
+### Git 이란?
+- 분산버전관리 시스템 : 프로젝트에 참여하는 모든 개발자(클라이언트)가 젠체 저장소에 대한 개별적인 로컬 저장소를 갖고 작업, 개발자 각자 온전한 전체 저장소의 사본을 로컬에 가지고 있다.
+- 완벽한 분산 환경에서 빠르고 단순하게 동시다발적인 branch작업을 수행하는 것을 목표로 하는 버전관리 시스템
+### Git의 장점
+- 전 세계의 수많은 사용자 (대중성, 안정성)
+- git을 사용한 저장소 공유 사이트 Github
+- 사용자가 많은 만큼 tutorial과 project 존재
+### Git의 기능
+- 로컬 및 원격 저장소 생서
+- 로컬 저장소에 파일 생성 및 추가 
+- 수정 내역을 로컬 저장소에 제출
+- 파일 수정 내역 추적
+- 원격 저장소에 제출된 수정 내역을 로컬에서 사용
+- master에 영향을 끼치지 않는 branch 생성
+- branch 사이의 병합 (Merge)
+- branch 병합하는 도중 충돌 (conflict) 
+### Git으로 협업하기
+- 팀원 사이의 버전 맞춤
+- 할당된 작업의 결과물 관리
+- 결과물의 추적 
